@@ -22,6 +22,7 @@
 * Fixed a bug that prevented using commands while disconnected (Issue 79)
 * Started an 'addalias' command (Issue 82)
 * The bot will attempt to re-launch itself after downloading an update
+* Added an 'update' command
 
 2.0.6 (r1400) 2008-04-21:
 * Added auto-rejoin afer being kicked (Issue 52)
